Linked Instanced collections are not being displayed in the viewport with Local collections enabled #70046

Closed
opened 2019-09-19 00:36:08 +02:00 by Satish Goda · 11 comments

primitives_in_collections.blend

local_collections.blend

System Information
Operating system: Windows 10 1803
Graphics card: NVIDIA Quadro M1000M

Blender Version
Broken: (example: 2.81 alpha, b962aca800)

Short description of error

Instanced collections are not being displayed in the viewport with Local collections enabled. Only the empty draw shape is displayed.

Exact steps for others to reproduce the error

  • Link one or more collections from another blend file
  • Add them to a new collection
  • Activate local collection in a viewport
  • You will only see the empty draw shape (and not the instanced collection shape(s))
  • If you uncheck "Local Collection", the shapes are displayed again.

I have uploaded two blend files that can demonstrate the problem. Open the local_collections.blend file (which links two collections from primitives_in_collections.blend)

Please see image below for the bug in action

Annotation 2019-09-18 153452.png

Thank you,
Satish Goda

[primitives_in_collections.blend](https://archive.blender.org/developer/F7757033/primitives_in_collections.blend) [local_collections.blend](https://archive.blender.org/developer/F7757034/local_collections.blend) **System Information** Operating system: Windows 10 1803 Graphics card: NVIDIA Quadro M1000M **Blender Version** Broken: (example: 2.81 alpha, b962aca8003d) **Short description of error** Instanced collections are not being displayed in the viewport with Local collections enabled. Only the empty draw shape is displayed. **Exact steps for others to reproduce the error** - Link one or more collections from another blend file - Add them to a new collection - Activate local collection in a viewport - You will only see the empty draw shape (and not the instanced collection shape(s)) - If you uncheck "Local Collection", the shapes are displayed again. I have uploaded two blend files that can demonstrate the problem. Open the local_collections.blend file (which links two collections from primitives_in_collections.blend) Please see image below for the bug in action ![Annotation 2019-09-18 153452.png](https://archive.blender.org/developer/F7757044/Annotation_2019-09-18_153452.png) Thank you, Satish Goda
Author

Added subscriber: @satishgoda1

Added subscriber: @satishgoda1

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2019-09-19 02:09:29 +02:00

Yet to confirm but it is a likely issue. We are about to do some changes in this area (D4416) so I will wait after that is merged to look at this.

Yet to confirm but it is a likely issue. We are about to do some changes in this area ([D4416](https://archive.blender.org/developer/D4416)) so I will wait after that is merged to look at this.
Author

Sounds good Dalai :)

Thank you,
Satish

Sounds good Dalai :) Thank you, Satish
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Similar issue happens here #69718 (Particles: 'render as' collection does not render/display instances inside that collection) (though it has nothing to do with linking... just noting the same symptoms)

Similar issue happens here #69718 (Particles: 'render as' collection does not render/display instances inside that collection) (though it has nothing to do with linking... just noting the same symptoms)

Added subscriber: @frameshift

Added subscriber: @frameshift
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

I'll just set this to high priority, since it basically makes the feature useless and hugely confusing for any typical production file.

I'll just set this to high priority, since it basically makes the feature useless and hugely confusing for any typical production file.

This issue was referenced by 0dd83b385e

This issue was referenced by 0dd83b385ec1c48533145f507eb700013a9a362b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70046
No description provided.