Fix T70046: Linked instanced collections not working with local collections